--- a/app/src/main/res/layout/challenge_list_item.xml
+++ b/app/src/main/res/layout/challenge_list_item.xml
@@ -10,7 +10,7 @@
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     app:contentPadding="17dp"
-    app:cardBackgroundColor="@color/lightGray"
+    app:cardBackgroundColor="@color/light_gray"
     app:cardCornerRadius="5dp"
     app:cardElevation="3dp">
 
