--- a/app/src/main/res/layout/divided_list.xml
+++ b/app/src/main/res/layout/divided_list.xml
@@ -18,6 +18,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_items"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:overScrollMode="never" />
 
 </LinearLayout>
