--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -6,7 +6,7 @@
 
             <gradient
                 android:angle="90"
-                android:startColor="@color/button_color"
+                android:startColor="@color/button_colour"
                 android:endColor="@color/button_grad_end"  />
         </shape>
     </item>
