--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="start"
-    android:background="@color/screenBackground">
+    android:background="@color/primary_colour">
 
     <ImageView
         android:layout_width="100dp"
