--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary_colour">#50C864</color>
+    <color name="secondary_colour">@android:color/white</color>
+
+    <color name="action_bar_primary">#00A86B</color>
+    <color name="action_bar_secondary">@android:color/black</color>
+
     <color name="light_gray">#F3F3F3</color>
     <color name="dark_gray">@android:color/darker_gray</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="screenBackground">#50C864</color>
+
     <color name="freeze_icon">#3CC0F2</color>
 
     <color name="rm_summary_background">#FBFBFB</color>
     <color name="rm_detail_background">#FBFBF2</color>
 
-    <color name="button_color">#E6C53C</color>
+    <color name="button_colour">#E6C53C</color>
     <color name="button_grad_end">#F7D651</color>
 
-    <color name="summary_text_color">@android:color/primary_text_light</color>
-    <color name="info_label_color">#303030</color>
-    <color name="link_label_color">#606060</color>
-    <color name="pointer_color">#384D9E</color>
-
-    <color name="secondary_color">@android:color/white</color>
-
-    <color name="action_bar_primary">#00A86B</color>
-    <color name="action_bar_secondary">@android:color/black</color>
+    <color name="info_label_colour">#303030</color>
+    <color name="link_label_colour">#606060</color>
+    <color name="pointer_colour">#384D9E</color>
 </resources>
