Fixed button shadows

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,6 +148,9 @@
     <style name="ChallengeButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:layout_below">@id/challenge_card</item>
+        <item name="android:layout_marginTop">25dp</item>
         <item name="android:fontFamily">@font/asap</item>
     </style>
 
