--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center">
 
     <include
@@ -12,14 +11,28 @@
         android:layout_height="220dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        layout="@layout/challenge_card"/>
+        layout="@layout/challenge_card" />
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+    <Button
+        android:id="@+id/skip_button"
+        android:layout_below="@id/challenge_card"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        layout="@layout/challenge_button_bar" />
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/asap"
+        android:text="@string/skip_label"
+        style="@style/ChallengeButton" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/complete_button"
+        android:layout_below="@id/challenge_card"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/skip_button"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/asap"
+        android:text="@string/complete_label"
+        style="@style/ChallengeButton" />
+
+</RelativeLayout>
