--- a/app/src/main/res/layout/fragment_challenge_list.xml
+++ b/app/src/main/res/layout/fragment_challenge_list.xml
@@ -19,16 +19,9 @@
 
         <TextView
             android:id="@+id/completed_list_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="25dp"
-            android:fontFamily="@font/asap"
             android:text="@string/completed_list_message"
-            android:textAlignment="center"
             android:textSize="24sp"
-            android:textColor="@color/secondary_colour"
-            style="@style/BodyText" />
+            style="@style/CenteredMessage" />
 
     </RelativeLayout>
 
