--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -41,6 +41,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
+            android:visibility="gone"
             android:contentDescription="@string/streak_icon_desc"
             app:srcCompat="@mipmap/streak_icon" />
 
