Changed text formatting for tutorial text

--- a/app/src/main/res/layout/fragment_tutorial_page.xml
+++ b/app/src/main/res/layout/fragment_tutorial_page.xml
@@ -21,6 +21,6 @@
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:paddingTop="5dp"
-        style="@style/SubText" />
+        style="@style/BodyText" />
 
 </RelativeLayout>
