--- a/app/src/main/res/layout/read_more_summary.xml
+++ b/app/src/main/res/layout/read_more_summary.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/summary_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="12dp"
-        android:paddingBottom="30dp"
         android:orientation="vertical"
         android:background="@color/rm_summary_background"
         style="@style/ReadMorePadding">
@@ -38,14 +37,13 @@
 
         <TextView
             android:id="@+id/challenge_summary"
+            android:layout_marginBottom="30dp"
             style="@style/BodyText" />
 
         <TextView
             android:id="@+id/read_more_pointer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="6dp"
             android:text="@string/read_more_label"
             android:textColor="@color/pointer_colour"
             android:textAlignment="center"
@@ -56,7 +54,4 @@
             style="@style/BoldHeading" />
 
     </LinearLayout>
-
-    <include layout="@layout/read_more_gradient" />
-
-</LinearLayout>
+</RelativeLayout>
