--- a/app/src/main/res/layout/fragment_read_more.xml
+++ b/app/src/main/res/layout/fragment_read_more.xml
@@ -24,7 +24,7 @@
             <View
                 android:id="@+id/yellow_gradient"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="@dimen/rm_gradient_height"
                 android:background="@drawable/rm_gradient" />
 
             <include
