--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -14,7 +14,7 @@
         android:id="@+id/pager_dots"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/help_dots_margin_above"
         android:layout_above="@id/tutorial_button"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
