--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/welcome_message"
         android:alpha="0"
-        android:textSize="27sp"
+        android:textSize="@dimen/welcome_text_size"
         android:text="@string/welcome_message"
         style="@style/CenteredMessage" />
 
