--- a/app/src/main/res/layout/read_more_summary.xml
+++ b/app/src/main/res/layout/read_more_summary.xml
@@ -9,7 +9,7 @@
         android:id="@+id/summary_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="12dp"
+        android:paddingTop="@dimen/rm_layout_padding_above"
         android:orientation="vertical"
         android:background="@color/rm_summary_background"
         style="@style/ReadMorePadding">
@@ -21,23 +21,23 @@
 
         <TextView
             android:id="@+id/challenge_title"
-            android:layout_marginTop="3dp"
-            android:textSize="34sp"
+            android:layout_marginTop="@dimen/rm_title_margin_above"
+            android:textSize="@dimen/rm_title_size"
             android:transitionName="title_element"
             style="@style/BoldHeading" />
 
         <ImageView
             android:id="@+id/category_icon"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="30dp"
+            android:layout_height="@dimen/rm_icon_height"
+            android:layout_marginTop="@dimen/rm_icon_margin_above"
+            android:layout_marginBottom="@dimen/rm_icon_margin_below"
             android:layout_gravity="center_horizontal"
             android:contentDescription="@string/category_icon_desc" />
 
         <TextView
             android:id="@+id/challenge_summary"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="@dimen/rm_summary_margin_below"
             style="@style/BodyText" />
 
         <TextView
@@ -47,8 +47,8 @@
             android:text="@string/read_more_label"
             android:textColor="@color/pointer_colour"
             android:textAlignment="center"
-            android:textSize="18sp"
-            android:drawablePadding="6dp"
+            android:textSize="@dimen/rm_pointer_size"
+            android:drawablePadding="@dimen/rm_pointer_arrow_padding"
             app:drawableBottomCompat="@mipmap/read_more_arrow"
             app:drawableTint="@color/pointer_colour"
             style="@style/BoldHeading" />
