--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,6 @@
 
     <color name="light_gray">#F3F3F3</color>
     <color name="dark_gray">@android:color/darker_gray</color>
-    <color name="colorPrimaryDark">#3700B3</color>
 
     <color name="freeze_icon">#3CC0F2</color>
 
@@ -18,6 +17,7 @@
     <color name="button_colour">#E6C53C</color>
     <color name="button_grad_end">#F7D651</color>
 
+    <color name="main_text_colour">@android:color/black</color>
     <color name="info_label_colour">#303030</color>
     <color name="link_label_colour">#606060</color>
     <color name="pointer_colour">#384D9E</color>
