--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -42,7 +42,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="35dp"
+        android:layout_marginStart="@dimen/help_button_margin_horizontal"
+        android:layout_marginEnd="@dimen/help_button_margin_horizontal"
+        android:layout_marginTop="@dimen/help_button_margin_above"
+        android:layout_marginBottom="@dimen/help_button_margin_below"
         android:fontFamily="@font/asap"
         android:background="@drawable/rounded_button" />
 
