--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -136,6 +136,7 @@
     <!--  Challenge Text Sizes  -->
 
     <dimen name="challenge_card_title_size">22sp</dimen>
+    <dimen name="challenge_button_size">15sp</dimen>
     <dimen name="streak_value_size">15sp</dimen>
 
 
@@ -165,6 +166,7 @@
     <!--  Other Text Sizes  -->
 
     <dimen name="welcome_text_size">27sp</dimen>
+    <dimen name="first_launch_button_size">15sp</dimen>
     <dimen name="toolbar_text_size">20sp</dimen>
 
 </resources>
