--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -166,7 +166,9 @@
 
         <item name="android:layout_below">@id/challenge_card</item>
         <item name="android:layout_marginTop">@dimen/challenge_button_margin_above</item>
+
         <item name="android:fontFamily">@font/asap</item>
+        <item name="android:textSize">@dimen/challenge_button_size</item>
     </style>
 
 
@@ -177,9 +179,10 @@
         <item name="android:layout_marginStart">@dimen/first_launch_button_margin_horizontal</item>
         <item name="android:layout_marginEnd">@dimen/first_launch_button_margin_horizontal</item>
 
-        <item name="android:alpha">0</item>
+        <item name="android:alpha">100</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:fontFamily">@font/asap</item>
+        <item name="android:textSize">@dimen/first_launch_button_size</item>
     </style>
 
 
@@ -195,7 +198,7 @@
         <item name="android:layout_marginEnd">@dimen/first_launch_box_margin_horizontal</item>
         <item name="android:layout_marginBottom">@dimen/first_launch_box_margin_bottom</item>
 
-        <item name="android:alpha">0</item>
+        <item name="android:alpha">100</item>
         <item name="background">@color/light_gray</item>
         <item name="contentPadding">@dimen/first_launch_box_content_padding</item>
         <item name="cardCornerRadius">@dimen/first_launch_box_corner</item>
