--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,6 +100,12 @@
             app:popUpTo="@id/help_fragment"
             app:popUpToInclusive="true" />
 
+        <action
+            android:id="@+id/help_to_challenge"
+            app:destination="@id/challenge_fragment"
+            app:popUpTo="@id/help_fragment"
+            app:popUpToInclusive="true" />
+
     </fragment>
 
     <fragment
