--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -48,6 +48,7 @@
     <dimen name="rm_pointer_arrow_padding">6dp</dimen>
     <dimen name="rm_desc_margin_above">25dp</dimen>
     <dimen name="rm_link_label_margin_above">40dp</dimen>
+    <dimen name="rm_link_padding_vertical">8dp</dimen>
 
     <dimen name="rm_icon_height">150dp</dimen>
     <dimen name="rm_gradient_height">40dp</dimen>
