Added text box around tutorial text

--- a/app/src/main/res/values-sw600dp/dimen.xml
+++ b/app/src/main/res/values-sw600dp/dimen.xml
@@ -76,7 +76,7 @@
     <dimen name="help_dots_margin_horizontal">5dp</dimen>
 
     <dimen name="help_text_padding_horizontal">65dp</dimen>
-    <dimen name="help_text_padding_above">40dp</dimen>
+    <dimen name="help_text_padding_above">90dp</dimen>
 
     <dimen name="help_button_margin_horizontal">150dp</dimen>
     <dimen name="help_button_margin_above">30dp</dimen>
@@ -114,7 +114,7 @@
     <dimen name="body_text_size">24sp</dimen>
     <dimen name="wider_line_spacing">3sp</dimen>
     <dimen name="dialog_text_size">10sp</dimen>
-
+    <dimen name="boxed_text_size">20sp</dimen>
 
     <!--  Challenge Text Sizes  -->
 
