--- a/app/src/main/res/layout/fragment_tutorial_page.xml
+++ b/app/src/main/res/layout/fragment_tutorial_page.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/example_image"
@@ -13,15 +14,21 @@
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/tutorial_desc" />
 
-    <TextView
-        android:id="@+id/tutorial_text"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/example_image"
         android:layout_centerHorizontal="true"
-        android:paddingStart="@dimen/help_text_padding_horizontal"
-        android:paddingEnd="@dimen/help_text_padding_horizontal"
-        android:paddingTop="@dimen/help_text_padding_above"
-        style="@style/BodyText" />
+        android:layout_marginStart="@dimen/help_text_padding_horizontal"
+        android:layout_marginEnd="@dimen/help_text_padding_horizontal"
+        android:layout_marginTop="@dimen/help_text_padding_above"
+        app:contentPadding="@dimen/text_box_content_padding">
 
+        <TextView
+            android:id="@+id/tutorial_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/BoxedText" />
+
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
