Added navigation access to notification/settings page

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -123,5 +123,9 @@
         android:id="@+id/credits_fragment"
         android:name="com.okomilabs.dailychallenges.fragments.CreditsFragment"
         android:label="Credits" />
+    <fragment
+        android:id="@+id/notification_fragment"
+        android:name="com.okomilabs.dailychallenges.fragments.NotificationFragment"
+        android:label="Settings"/>
 
 </navigation>
